@@ -1,3 +1,13 @@
+2013-02-28  Takashi Toyoshima  <toyoshim@chromium.org>
+
+        Unreviewed, quick test breakage fix for android
+        https://bugs.webkit.org/show_bug.cgi?id=110740
+
+        Patch by Seigo Nonaka <nona@chromium.org> on 2013-02-27
+
+        * src/WebViewImpl.cpp:
+        (WebKit::WebViewImpl::textInputInfo): Reconstruct condition check order
+
 2013-02-28  Sheriff Bot  <webkit.review.bot@gmail.com>
 
         Unreviewed.  Rolled Chromium DEPS to r184931.  Requested by
